fix alignment issues in assessment overview

--- a/src/reports/components/assessment-summary-details.scss
+++ b/src/reports/components/assessment-summary-details.scss
@@ -8,29 +8,39 @@
 
     .assessment-summary-details-body {
         column-count: 2;
-        column-gap: 2%;
+        column-gap: 4%;
         display: block;
         width: 100%;
+        align-items: start;
 
-        .test-summary {
-            display: flex;
-            width: 98%;
-            padding: 2% 1% 2% 1%;
-            justify-content: space-between;
-        }
+        .assessment-summary-details-row {
+            // This intermediate inline-block element between the wrapping multi-column block layout and
+            // the per-row flex layout is required for Chromium to respect the parent's align-items style.
+            display: inline-block;
+            width: 100%;
 
-        .test-summary {
-            border-bottom: $neutral-alpha-8 solid 1px;
-        }
-        .test-summary-status {
-            display: flex;
-            align-items: center;
-        }
+            .test-summary {
+                // This prevents rows from overflowing/wrapping at small screen widths; it will need to be
+                // adjusted if we add new tests with longer names in the future.
+                min-width: 230px;
 
-        .test-summary-display-name {
-            font-family: $semiBoldFontFamily;
-            font-size: 14px;
-            line-height: 20px;
+                display: flex;
+                width: 98%;
+                padding: 2% 1% 2% 1%;
+                justify-content: space-between;
+                border-bottom: $neutral-alpha-8 solid 1px;
+            }
+
+            .test-summary-status {
+                display: flex;
+                align-items: center;
+            }
+
+            .test-summary-display-name {
+                font-family: $semiBoldFontFamily;
+                font-size: 14px;
+                line-height: 20px;
+            }
         }
     }
 }
